# stackstage-ui

./: .env.example  .replit  AI_FALLBACK_ELIMINATION_SUMMARY.md  BACKEND_INTEGRATION_GUIDE.md  COMPLETE_FOLDER_STRUCTURE.md  Dockerfile  FEATURE_IMPLEMENTATION_STATUS.md  FRONTEND_SUMMARY.md  INTEGRATION_STATUS.md  PAGE_WISE_DETAILED_FEATURES.md  README.md  UPDATED_CODE_SUMMARY.md  VERIFICATION_COMPLETE.md  backend_simple_test.py  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  replit.md  start_backend.sh  start_stackstage.py  tailwind.config.ts  test_backend.py
.storage/: analyses.json
attached_assets/: Exercise_1_1755837896726.tf  Pasted--Build-a-Complete-FastAPI-Backend-for-StackStage-Overview-You-are-building-a-producti-1755256419642_1755256419642.txt  Pasted--Build-a-Powerful-FastAPI-Backend-for-StackStage-You-are-building-a-production-grade-Fas-1755256593805_1755256593806.txt  Pasted--Current-State-of-the-Backend-Dual-backend-architecture-Node-js-Express--1756627190077_1756627190078.txt  Pasted--Enhance-StackStage-s-Homepage-with-working-feature-section-advanced-animations-and-vibrant-A-1754290017887_1754290017887.txt  Pasted--Enhance-StackStage-s-homepage-with-a-polished-TrueFocus-word-animation-and-vibrant-professi-1754291556431_1754291556434.txt  Pasted--PROJECT-CONTEXT-StackStage-helps-DevOps-teams-cloud-architects-and-enterprises-validate-score-1756626287545_1756626287546.txt  Pasted--StackStage-Backend-FastAPI-Replit-Setup-1-Project-Setup-Create-a-new-Replit-Python-project-a-1755173082665_1755173082666.txt  Pasted--Step-1-Train-the-Assistant-with-Stronger-Context-Update-the-system-prompt-in-assistant-chat-to-1755174827704_1755174827705.txt  Pasted-1-Problems-in-the-output-what-to-fix-Unstructured-text-frontend-must-parse-JSON-but-got-plain-t-1755177828288_1755177828289.txt  (+8 more)
backend/: .env  README.md  (+5 more)
(+120 files in other folders)
