[project]
name = "stackstage-backend"
version = "1.0.0"
description = "StackStage FastAPI Backend - Production-grade cloud architecture analysis platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "firebase-admin>=6.5.0",
    "reportlab>=4.4.3",
    "weasyprint>=66.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "aiofiles>=24.1.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
    "azure-identity>=1.24.0",
    "azure-mgmt-resource>=24.0.0",
    "boto3>=1.40.13",
    "google-cloud-resource-manager>=1.14.2",
    "google-auth>=2.40.3",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "numpy>=2.3.2",
]
